@@ -1,11 +1,11 @@
 package com.api.prisma_vi.gemini;
 
-import com.api.prisma_vi.colors.ColorsService;
+import com.api.prisma_vi.color.ColorMapper;
+import com.api.prisma_vi.color.ColorService;
+import com.api.prisma_vi.color.ColorView;
 import com.api.prisma_vi.gemini.feign.GeminiClient;
 import com.api.prisma_vi.utils.apiError.InvalidHexadecimalException;
-import com.api.prisma_vi.colors.ColorResponseWrapper;
-import com.api.prisma_vi.colors.ColorsForm;
-import com.fasterxml.jackson.core.JsonProcessingException;
+import com.api.prisma_vi.color.ColorForm;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -20,15 +20,17 @@ public class GeminiService {
 
     private static final Logger logger = LoggerFactory.getLogger(GeminiService.class);
 
-    private final ColorsService colorsService;
+    private final ColorService colorService;
     private final GeminiClient geminiClient;
+    private final ColorMapper colorMapper;
 
     @Value("${gemini.api.token}")
     private String apiToken;
 
-    public GeminiService(ColorsService colorsService, GeminiClient geminiClient) {
-        this.colorsService = colorsService;
+    public GeminiService(ColorService colorService, GeminiClient geminiClient, ColorMapper colorMapper) {
+        this.colorService = colorService;
         this.geminiClient = geminiClient;
+        this.colorMapper = colorMapper;
     }
 
 
@@ -36,13 +38,27 @@ public class GeminiService {
 
         String[] languages = {"pt-br","en-eu"};
 
-        ColorsForm object = new ColorsForm();
+        ColorForm object = new ColorForm();
 
-        return "considering the hex: " + hex
-                + " fill the object by replacing the values in parentheses according to what the values in parentheses and the require: "
-                + object
-                + " and translate the values to: "
-                + languages[1];
+        return """
+        You are an expert in color psychology, UI/UX, and design semantics.
+
+        Given the hexadecimal color code: %s
+        
+        Please fill the following JSON object with real and meaningful data about this color:
+        - Describe its psychological and emotional characteristics.
+        - Suggest use cases in design and branding.
+        - Name the color appropriately.
+        - Provide at least two related colors (complementary or analogous) with their names and HEX values.
+        - The answers should be well-written and translated into English (en-US).
+        - The entire response should be written in: %s
+        
+        Use the structure below as a template for the expected output (replace all example values):
+
+        %s
+
+        Return only the JSON object. Do not add explanations or introductions.
+        """.formatted(hex, languages[0], object.toString());
     }
 
 
@@ -58,43 +74,51 @@ public class GeminiService {
     }
 
     private String formatResponse(String jsonResponse) {
-        ObjectMapper objectMapper = new ObjectMapper();
         try {
-            GeminiResponseBody response = objectMapper.readValue(jsonResponse, GeminiResponseBody.class);
-            return response.candidates().get(0).content().parts().get(0).text();
-        } catch (JsonProcessingException e) {
-            logger.error("Error processing JSON response: {}", e.getMessage(), e);
-            return "Error processing the response: Invalid JSON format";
+            ObjectMapper mapper = new ObjectMapper();
+            GeminiResponseBody root = mapper.readValue(jsonResponse, GeminiResponseBody.class);
+            return root.candidates()
+                    .getFirst()
+                    .content()
+                    .parts()
+                    .getFirst()
+                    .text();
+
         } catch (Exception e) {
-            logger.error("Unexpected error occurred while processing response: {}", e.getMessage(), e);
-            return "Unexpected error occurred";
+            System.out.println(e.getMessage());
+            return null;
         }
     }
-    public ColorResponseWrapper responseToColorView(String jsonResponse) {
-        ObjectMapper objectMapper = new ObjectMapper();
+    public ColorForm responseToColorForm(String jsonResponse) {
+        ObjectMapper mapper = new ObjectMapper();
         try {
-            return objectMapper.readValue(jsonResponse, ColorResponseWrapper.class);
-        } catch (JsonProcessingException e) {
-            logger.error("Error processing JSON response in responseToColorView: {}", e.getMessage(), e);
-            return null;
+            return mapper.readValue(jsonResponse, ColorForm.class);
         } catch (Exception e) {
-            logger.error("Unexpected error occurred while converting response to ColorResponseWrapper: {}", e.getMessage(), e);
-            return null;
+            throw new RuntimeException(e);
         }
     }
 
+    private ColorView colorFormToColorView(ColorForm form, String hex){
+        return colorMapper.formToView(form, hex);
+    }
+
     public ResponseEntity<?> validatedSearchColor(String hex){
-        try {colorsService.validateHexColor(hex);}
+        try {
+            colorService.validateHexColor(hex);}
         catch (InvalidHexadecimalException e){
             return ResponseEntity.badRequest().body(e.getMessage());
         }
         return ResponseEntity.ok().body(
-                //responseToColorView(
-                        //formatResponse(
-                            generateContent(
-                                generatePrompt(hex.trim()))
-                        //)
-                //)
+                colorFormToColorView(
+                        responseToColorForm(
+                                formatResponse(
+                                        generateContent(
+                                                generatePrompt(hex.trim()))
+                                )
+                        )
+                        ,hex
+                )
+
         );
     }
 }
